# first_connection_hackaton

./: .gitignore  README.md  main.py  pyproject.toml
src/db/: db.py
