[tool.poetry]
name = "hackathonurait"
version = "0.1.0"
description = ""
authors = ["Puzanovim <puzanovim@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
PyMySQL = "1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
